completed index html, added 3 links

--- a/index.html
+++ b/index.html
@@ -1,9 +1,25 @@
 <!DOCTYPE html>
 <html>
     <head>
-
+        <title>Forever a Bostonian</title>
     </head>
     <body>
-
+        <h1>Welcome to my First Website!</h1>
+        <h2>Short and Sappy Introduction</h2>
+        <p>
+            Life, to say the least, have definitely been a roller coaster of a ride. However, I don't regret a single thing that I did thus far because if it wasn't for those instances, I would not be where I am now with absolute clarity of my career aspirations. Enough of the introductions though... Here is a website about why I am proud and forever will be a Bostonian!
+        </p>
+        <h2>Everyone's First Impression of Boston</h2>
+        <p>
+            If you're not from Boston, you will never know how it feels like to be assumed that you have a Boston accent, or use the term "wicked" in every sentence we say. Not cool... <strong>BUT</strong>, I do have to admit, sometimes, and I do mean sometimes because it is <em>very</em> situational, it feels good to say "wickEDDD" to something real hype or "pahked the cah in hahvud yahd" when imitating a "Bostonian". Only we get those privileges though :). Anywhom, this website will tell you that we have more than just that. We are a diverse and friendly group of people who will help you out if you're a quarter short for the train (I will, at least). Sit back and enjoy!
+        </p>
+        <h2>Navigation to links:</h2>
+        <p>Below are 4 links that will each have a reason why Boston is awesome (First link is this page)</p>
+        <ol>
+            <li><a href="index.html" target="_blank">Click to see this page on a new tab</a></li>
+            <li><a href="form.html" target="_blank">Will you vibe with this city? (Questionaire)</a></li>
+            <li><a href="list-of-links.html" target="_blank">This will make you love Boston</a></li>
+            <li><a href="collage.html" target="_blank">Collage that will make you love Boston even more</a></li>
+        </ol>
     </body>
 </html>
