completed first version of form

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     </head>
     <body>
         <h1>Welcome to my First Website!</h1>
+        <img src="boston-skyline.jpg" alt="Boston Skyline">
         <h2>Short and Sappy Introduction</h2>
         <p>
             Life, to say the least, have definitely been a roller coaster of a ride. However, I don't regret a single thing that I did thus far because if it wasn't for those instances, I would not be where I am now with absolute clarity of my career aspirations. Enough of the introductions though... Here is a website about why I am proud and forever will be a Bostonian!
