--- a/list-of-links.html
+++ b/list-of-links.html
@@ -11,5 +11,25 @@
             <li><a href="list-of-links.html" target="_blank">This will make you love Boston</a></li>
             <li><a href="collage.html" target="_blank">Collage that will make you love Boston even more</a></li>
         </ol>
+        <h1>Beautiful City of Boston</h1>
+        <p>
+            Links below will bring you to various locations/festivities/etc. that I have personally experienced myself. Obviously, there are going to be other activities/locations that I never experienced, so please don't use this site as your only source of information for such a big city!
+        </p>
+        <h2>My Top 5 Must-Visit's</h2>
+        <ol>
+            <li><a href="https://www.thefreedomtrail.org/trail-sites/boston-common" target="_blank">Boston Common</a></li>
+            <li><a href="https://www.bostonseaport.xyz/" target="_blank">Seaport</a></li>
+            <li><a href="https://www.prudentialcenter.com/" target="_blank">Prudential Center</a></li>
+            <li><a href="https://www.boston-discovery-guide.com/fenway.html" target="_blank">Fenway</a></li>
+            <li><a href="https://faneuilhallmarketplace.com/" target="_blank">Faneuil Hall</a></li>
+        </ol>
+        <h2>Favorite Places to Eat (no particular order)</h2>
+        <ul>
+            <li><a href="https://www.yumegaarukara.com/" target="_blank">Yume Ga Arukara</a></li>
+            <li><a href="https://www.fairycafequincy.com/" target="_blank">Fairy Cafe</a></li>
+            <li><a href="https://captloui.com/" target="_blank">Capt Loui</a></li>
+            <li><a href="https://malarestauranttogo.com/" target="_blank">Mala-Allston</a></li>
+            <li><a href="https://www.springshabu.com/" target="_blank">Spring Shabu-Shabu</a></li>
+        </ul>
     </body>
 </html>
