completed first version of collage page

--- a/collage.html
+++ b/collage.html
@@ -11,5 +11,30 @@
             <li><a href="list-of-links.html" target="_blank">This will make you love Boston</a></li>
             <li><a href="collage.html" target="_blank">Collage that will make you love Boston even more</a></li>
         </ol>
+        <h1>Collage of Boston</h1>
+        <figure>
+            <a href="boston-common.jpg" target="_blank"><img src="boston-common.jpg" alt="Boston Common"></a>
+            <figcaption>Boston Common</figcaption>
+        </figure>
+        <figure>
+            <a href="faneuil.jpg" target="_blank"><img src="faneuil.jpg" alt="Faneuil Hall"></a>
+            <figcaption>Faneuil Hall</figcaption>
+        </figure>
+        <figure>
+            <a href="fenway.jpg" target="_blank"><img src="fenway.jpg" alt="Fenway"></a>
+            <figcaption>Fenway</figcaption>
+        </figure>
+        <figure>
+            <a href="hot-pot.jpg" target="_blank"><img src="hot-pot.jpg" alt="Hot Pot"></a>
+            <figcaption>Hot Pot, a very famous Chinese meal</figcaption>
+        </figure>
+        <figure>
+            <a href="udon.jpg" target="_blank"><img src="udon.jpg" alt="Udon"></a>
+            <figcaption>Japanese Udon, my personal favorite!</figcaption>
+        </figure>
+        <figure>
+            <a href="zakim-td.jpg" target="_blank"><img src="zakim-td.jpg" alt="Zakim Bridge"></a>
+            <figcaption>A view of Zakim Bridge and TD Garden</figcaption>
+        </figure>
     </body>
 </html>
