completed first version of website, including css

--- a/collage.html
+++ b/collage.html
@@ -2,39 +2,44 @@
 <html>
     <head>
         <title>Collage of Boston</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <h2>Navigation to links:</h2>
-        <ol>
-            <li><a href="index.html" target="_blank">Home page</a></li>
-            <li><a href="form.html" target="_blank">Will you vibe with this city? (Questionaire)</a></li>
-            <li><a href="list-of-links.html" target="_blank">This will make you love Boston</a></li>
-            <li><a href="collage.html" target="_blank">Collage that will make you love Boston even more</a></li>
-        </ol>
+        <div class="navigation">
+            <h2>Navigation to links:</h2>
+            <ol>
+                <li><a href="index.html" target="_blank">Home Page</a></li>
+                <li><a href="form.html" target="_blank">Will you vibe with this city? (Questionaire)</a></li>
+                <li><a href="list-of-links.html" target="_blank">This will make you love Boston</a></li>
+                <li><a href="collage.html" target="_blank">Collage that will make you love Boston even more</a></li>
+            </ol>
+        </div>
         <h1>Collage of Boston</h1>
-        <figure>
-            <a href="boston-common.jpg" target="_blank"><img src="boston-common.jpg" alt="Boston Common"></a>
-            <figcaption>Boston Common</figcaption>
-        </figure>
-        <figure>
-            <a href="faneuil.jpg" target="_blank"><img src="faneuil.jpg" alt="Faneuil Hall"></a>
-            <figcaption>Faneuil Hall</figcaption>
-        </figure>
-        <figure>
-            <a href="fenway.jpg" target="_blank"><img src="fenway.jpg" alt="Fenway"></a>
-            <figcaption>Fenway</figcaption>
-        </figure>
-        <figure>
-            <a href="hot-pot.jpg" target="_blank"><img src="hot-pot.jpg" alt="Hot Pot"></a>
-            <figcaption>Hot Pot, a very famous Chinese meal</figcaption>
-        </figure>
-        <figure>
-            <a href="udon.jpg" target="_blank"><img src="udon.jpg" alt="Udon"></a>
-            <figcaption>Japanese Udon, my personal favorite!</figcaption>
-        </figure>
-        <figure>
-            <a href="zakim-td.jpg" target="_blank"><img src="zakim-td.jpg" alt="Zakim Bridge"></a>
-            <figcaption>A view of Zakim Bridge and TD Garden</figcaption>
-        </figure>
+        <div class="photos">
+            <figure>
+                <a href="boston-common.jpg" target="_blank"><img src="boston-common.jpg" alt="Boston Common" width="500px" height="400px"></a>
+                <figcaption>Boston Common</figcaption>
+            </figure>
+            <figure>
+                <a href="faneuil.jpg" target="_blank"><img src="faneuil.jpg" alt="Faneuil Hall" width="500px" height="400px"></a>
+                <figcaption>Faneuil Hall</figcaption>
+            </figure>
+            <figure>
+                <a href="fenway.jpg" target="_blank"><img src="fenway.jpg" alt="Fenway" width="500px" height="400px"></a>
+                <figcaption>Fenway</figcaption>
+            </figure>
+            <figure>
+                <a href="hot-pot.jpg" target="_blank"><img src="hot-pot.jpg" alt="Hot Pot" width="500px" height="400px"></a>
+                <figcaption>Hot Pot, a very famous Chinese meal</figcaption>
+            </figure>
+            <figure>
+                <a href="udon.jpg" target="_blank"><img src="udon.jpg" alt="Udon" width="500px" height="400px"></a>
+                <figcaption>Japanese Udon, my personal favorite!</figcaption>
+            </figure>
+            <figure>
+                <a href="zakim-td.jpg" target="_blank"><img src="zakim-td.jpg" alt="Zakim Bridge" width="500px" height="400px"></a>
+                <figcaption>A view of Zakim Bridge and TD Garden</figcaption>
+            </figure>
+        </div>
     </body>
 </html>
