--- a/form.html
+++ b/form.html
@@ -2,15 +2,18 @@
 <html>
     <head>
         <title>Questionnaire</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <h2>Navigation to links:</h2>
-        <ol>
-            <li><a href="index.html" target="_blank">Home page</a></li>
-            <li><a href="form.html" target="_blank">Will you vibe with this city? (Questionaire)</a></li>
-            <li><a href="list-of-links.html" target="_blank">This will make you love Boston</a></li>
-            <li><a href="collage.html" target="_blank">Collage that will make you love Boston even more</a></li>
-        </ol>
+        <div class="navigation">
+            <h2>Navigation to links:</h2>
+            <ol>
+                <li><a href="index.html" target="_blank">Home Page</a></li>
+                <li><a href="form.html" target="_blank">Will you vibe with this city? (Questionaire)</a></li>
+                <li><a href="list-of-links.html" target="_blank">This will make you love Boston</a></li>
+                <li><a href="collage.html" target="_blank">Collage that will make you love Boston even more</a></li>
+            </ol>
+        </div>
         <form>
             <fieldset>
                 <legend>Add User</legend>
@@ -23,7 +26,7 @@
                     <input type="text" id="location" name="the_location">
                 </div>
                 <div>
-                    <p>Have you even been to Boston?</p>
+                    <label>Have you even been to Boston?</label>
                     <label for="yes">Yes</label>
                     <input type="checkbox" id="yes" name="_yes">
                     <label for="no">No</label>
